2007-02-13  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c:
	    When doing fallback lock release via diagnostic() calls,
	    always report them as EX_TEMPFAIL.  In fallback they were
	    not yet properly processed.

2006-12-13  Matti Aarnio  <mea@zmailer.org>

	* proto/smtpserver.conf.in, smtpserver/cfgread.c,
	  smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtpcmds.c,   smtpserver/smtpdata.c,
	  smtpserver/smtphook.c:
	    Perl-hook revision from ...

	* man/smtpserver.8.in:
	    Initial comments on  perl-hook   mechanism.

	* contrib/hrr-srs-zpostgrey/usr/local/lib/zmailer/zpostgrey
	    Small changes to support upcoming call sequence changes.
	    Intention is to permit RCPTs to be given without immediately
	    issuing greyfilter on them, but doing reporting when it is
	    time for DATA/BDAT LAST.

2006-12-07  Matti Aarnio  <mea@zmailer.org>

	* router/zrfilter/Makefile.in, router/zrfilter/vis.c,
	  router/zrfilter/zrfilter.c:
	    More feeding of Daniel Kiper's bits.

	* smtpserver/smtpserver.c:
	    Sometimes there is a long delay from incoming connection
	    to its IP address' proper resolving.  Report at first
	    arriving connection with IP literal, and latter with
	    resolved reverser.  Also, start session specific log
	    delta-timer right at the connection time, not way latter
	    eg after resolving incoming connection IP address reversers.

	* utils/smtp-contentfilter.in:
	    The perl prototype of content filter service didn't
	    like at all when I force-fed it the '-Z zconf' parameter.
	    Had to alter  "while (<>) .." to "while (<STDIN>) .."
	    construction.

2006-12-06  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c:
	    To polish a very fine point, SMTP reply for MAIL FROM
	    does not allow "450", but "451" is acceptable.

	* smtpserver/smtpserver.c:
	    Feed a NUL-byte on ARGV-overwrite simulation of  setproctitle()
	    in systems that have to do that..
