@@ -3076,7 +3076,7 @@ int insecure;
 	    if (use_perlhook) {
 	      int rc;
 	      /* Now we are not interesed in result, it happens or not.. */
-	      ZSMTP_hook_univ(ZSMTP_HOOK_RSET, state, str, len, &rc);
+	      ZSMTP_hook_univ(ZSMTP_HOOK_RSET, &SS->policystate, buf, cp-buf, &rc);
 	    }
 #endif
 	    if (*cp != 0 && (strict_protocol > 0)) {
