@@ -1,5 +1,16 @@
 2007-02-13  Matti Aarnio  <mea@zmailer.org>
 
+	* smtpserver/smtpcmds.c, smtpserver/smtpdata.c,
+	  smtpserver/smtphook.c, smtpserver/smtpserver.c,
+	  smtpserver/smtpserver.h:
+	    A bit more generalized interfaces for perl hook,
+	    compile-checked this time...
+	
+	* smtpserver/subdaemon-trk.c:
+	    Share input language processing in between the internal
+	    clients and the cluster peers.
+	    (TODO: don't tell to self over the cluster!)
+
 	* transports/smtp/smtp.c:
 	    When doing fallback lock release via diagnostic() calls,
 	    always report them as EX_TEMPFAIL.  In fallback they were
@@ -11,7 +22,7 @@
 	  smtpserver/smtpserver.h, smtpserver/smtpserver.c,
 	  smtpserver/smtpcmds.c,   smtpserver/smtpdata.c,
 	  smtpserver/smtphook.c:
-	    Perl-hook revision from ...
+	    Perl-hook revision from Daniel Kiper.
 
 	* man/smtpserver.8.in:
 	    Initial comments on  perl-hook   mechanism.
